--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Household" />
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Manifest mit base URL für Render-Kompatibilität -->
+    <link rel="manifest" href="site.webmanifest" />
     
     <!-- Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
